@@ -1,33 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2018/10/15 09:02:42 adam Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/DNS/Base.py
-${PYSITELIB}/DNS/Base.pyc
-${PYSITELIB}/DNS/Base.pyo
-${PYSITELIB}/DNS/Class.py
-${PYSITELIB}/DNS/Class.pyc
-${PYSITELIB}/DNS/Class.pyo
-${PYSITELIB}/DNS/Lib.py
-${PYSITELIB}/DNS/Lib.pyc
-${PYSITELIB}/DNS/Lib.pyo
-${PYSITELIB}/DNS/Opcode.py
-${PYSITELIB}/DNS/Opcode.pyc
-${PYSITELIB}/DNS/Opcode.pyo
-${PYSITELIB}/DNS/Status.py
-${PYSITELIB}/DNS/Status.pyc
-${PYSITELIB}/DNS/Status.pyo
-${PYSITELIB}/DNS/Type.py
-${PYSITELIB}/DNS/Type.pyc
-${PYSITELIB}/DNS/Type.pyo
-${PYSITELIB}/DNS/__init__.py
-${PYSITELIB}/DNS/__init__.pyc
-${PYSITELIB}/DNS/__init__.pyo
-${PYSITELIB}/DNS/lazy.py
-${PYSITELIB}/DNS/lazy.pyc
-${PYSITELIB}/DNS/lazy.pyo
-${PYSITELIB}/DNS/win32dns.py
-${PYSITELIB}/DNS/win32dns.pyc
-${PYSITELIB}/DNS/win32dns.pyo
