@@ -1,28 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2016/10/27 12:03:51 jperkin Exp $
-${PYSITELIB}/DNS/Base.py
-${PYSITELIB}/DNS/Base.pyc
-${PYSITELIB}/DNS/Base.pyo
-${PYSITELIB}/DNS/Class.py
-${PYSITELIB}/DNS/Class.pyc
-${PYSITELIB}/DNS/Class.pyo
-${PYSITELIB}/DNS/Lib.py
-${PYSITELIB}/DNS/Lib.pyc
-${PYSITELIB}/DNS/Lib.pyo
-${PYSITELIB}/DNS/Opcode.py
-${PYSITELIB}/DNS/Opcode.pyc
-${PYSITELIB}/DNS/Opcode.pyo
-${PYSITELIB}/DNS/Status.py
-${PYSITELIB}/DNS/Status.pyc
-${PYSITELIB}/DNS/Status.pyo
-${PYSITELIB}/DNS/Type.py
-${PYSITELIB}/DNS/Type.pyc
-${PYSITELIB}/DNS/Type.pyo
-${PYSITELIB}/DNS/__init__.py
-${PYSITELIB}/DNS/__init__.pyc
-${PYSITELIB}/DNS/__init__.pyo
-${PYSITELIB}/DNS/lazy.py
-${PYSITELIB}/DNS/lazy.pyc
-${PYSITELIB}/DNS/lazy.pyo
-${PYSITELIB}/DNS/win32dns.py
-${PYSITELIB}/DNS/win32dns.pyc
-${PYSITELIB}/DNS/win32dns.pyo
